<resources>
    <string name="app_name">Cashbox driver</string>

    <string name="title_home">Платеж</string>
    <string name="title_input">Ввод информации</string>
    <string name="title_payments">Список платежей</string>
    <string name="title_report">Отчет</string>

    <string name="text_sum">Сумма поездки</string>
    <string name="payment">Способ платежа:</string>

    <string name="cash">Наличные</string>
    <string name="ticket">Талон</string>
    <string name="noticket">Без талона</string>
    <string name="by_card">По карте</string>
    <string name="by_yandexcash">Яндекc наличные</string>
    <string name="by_yandexnoncash">Яндекс по карте</string>
    <string name="by_yandexbonus">Яндекс бонус</string>

    <string name="sum_trip">Введите сумму поездки</string>
    <string name="btn.save">Записать</string>
    <string name="input_trip">Введите данные</string>


    <string name="message">Записано!!!</string>

    <string name="page_input_info">Страница ввода данных</string>
    <string name="page_report">Страница отчета</string>
    <string name="text_friends">4543</string>
    <string name="text_collection">rteteter</string>
    <string name="text_favorites">453rerer</string>
    <string name="cashbox_text1">Тут будут записи о том какие платежи за смену</string>

    <string name="menu_title1">О программе</string>
    <string name="menu_title2">Settings</string>
    <string name="menu_title3">Помощь</string>
    <string name="menu_title4">Список смен</string>



    <string name="paymentsum">Сумма</string>
    <string name="paymenttype">Тип</string>
    <string name="paymenttime">Время</string>

    <string name="workday">Дата и время смены (начало-окончание)</string>

    <string name="empty">empty</string>

    <string name="RS.name">empty</string>

    <string name="input_info">Запишите информацию</string>
    <string name="input_info_btn_timestart">Нажмите для начала смены</string>
    <string name="input_info_txt_timestart">Время начала смены</string>
    <string name="input_info_btn_timeend">Нaжмите для окончания смены</string>
    <string name="input_info_txt_timeend">Время окончания смены</string>
    <string name="input_info_edt_call">Введите позывной</string>
    <string name="input_info_edt_name">Запишите Фамилию и И.О.</string>
    <string name="input_info_edt_mileage1">Введите пробега в начале смены</string>
    <string name="input_info_edt_mileage2">Введите пробега в конце смены</string>
    <string name="input_info_edt_petrol">Безниз, литров</string>
    <string name="input_info_edt_petrol_exp">Бензин, руб</string>


    <string name="input_info_edt_expense">Прочие расходы</string>
    <string name="input_info_edt_comment">Комментарии, примечания</string>

    <string name="listworkday_timestart">Начало смены</string>
    <string name="listworkday_timeend">Окончание смены</string>


    <string name="report_filloil">Расход бензина, литр</string>
    <string name="report_comment">Комментарии</string>
    <string name="report_expense">Наличные расходы</string>
    <string name="report_mileage">Пробег за смену</string>
    <string name="report_mileage2">Пробег вконце смены</string>
    <string name="report_mileage1">Пробег вначале смены</string>
    <string name="report_nonticket">Оплаты без талонов</string>
    <string name="report_ticket">Оплаты талонами</string>
    <string name="report_noncash">Оплаты по карте</string>
    <string name="report_cash">Выручка наличными</string>
    <string name="report_proceeds">Общая выручка </string>
    <string name="report_data2">Окончание смены</string>
    <string name="report_data1">Начало смены</string>
    <string name="report_fio">Фамилия И.О.</string>
    <string name="report_call">Позывной</string>
    <string name="report_text">Отчет по смене</string>
    <string name="rs_sing">Подпись _________________</string>
    <string name="report_yandexbonus">Яндекс бонус</string>
    <string name="report_yandexnoncahs">Яндекс безнал</string>
    <string name="report_yandexcash">Яндекс наличные</string>
    <string name="report_filloil2">Расход бензина, руб</string>
    <string name="report_filloil3">Расход (литр/руб)</string>
    <string name="report_filloil4">Расход (литр/100км)</string>

    <string name="about">О программе</string>

    <string name="settings">Settings</string>
    <string name="Adapter_null">Adapter null</string>
    <string name="Text_exception">Adapter null</string>
    <string name="restore_gang">Возобновить смену</string>


    <string name="about_license">Licenses:</string>
    <string name="about_linklicenses">https://www.gnu.org/licenses/gpl-3.0-standalone.html</string>
    <string name="about_linklicenses_rus">http://antirao.ru/gpltrans/gplru.pdf</string>

    <string name="about_author">Разработчик Ирашин Дмитрий Андреевич</string>

    <string name="about_email">e-mail: irashin.dim@gmail.com</string>

    <string name="about_send_text">Сообщение разработчику</string>






    <string name="help">Руководство по использованию!</string>

    <string name="helptext">

        Программа позволяет записывать, хранить и просматривать информацию по сменам. \n
        Она умеет записывать данные по смене (пробег, фамилию, позывной, фиксирует время начала смены,
        время окончания, расход бензина, прочие расходы и оставлять комменатрии) и позволяет
        записывать полученные платежи, с дальнейшей выдачей подробного отчета по смене.


        Для начала использования откройте вкладку \"Ввод информации\" (открывается при старте программы); \n
        Далее заполните те поля которые можете заполнить и нажмите кнопку "начать смену"; \n
        Если появиться дополнительная информация, ее можно записать в теже поля и нажать кнопку "Записать",
        текст будет записан в базу данных.
        (Будьте внимательны, и обязательно нажимает кнопку записать при вводе новых данных, чтобы они
        записались в базу данных.) \n
        На этом этапе вы открыли (начали) текущую смену! \n
        Далее в процессе смены, переходите на вкладку \"Платеж\"; \n
        В этой вкладке вы записывайте все платежи в течении смены; \n
        В течении смены можно открыть вкладку \"Отчет\" и посмотреть уже имеющуюся информацию;  \n
        Можно открыть вкладку "Список платежей" и посмотреть записанные платежи в смене;  \n
        Когда смена заканчивается, переходите в вкладку \"Ввод информации\", заполняйте поля окончательно
        и нажимайте кнопку \"Завершить смену\", откроется отчет с выводом всей информации.
        На этом этапе примите поздравления, вы успешно завершили смену! \n
        \n
        Также есть еще кое-что: \n
        Есть возможность \"Возобновить смену\" (кнопка в верхнем меню),
        если по каким-то причинам вы ошибочно завершили смену или программа сама закрылась.
        (возобновляется последняя смена). \n
        Можно просмотреть списко всех предыдущих смен в меню \"Список смен\", а
        также из этого списка можно выбрать интересующую и просмотреть отчет по ней.\n
        Если в процессе смены ошиблись с платежом, то его можно удалить или отредактировать
        через вкладку \"Список платежей\"; \n

        \n
        <b>Внимание!\n </b>
        Все ошибки программы автоматически отправляются на сервер разработчика, для
        этого требуется интернет, но необязательно.
        Если у вас есть пожелания, замечания, то отправляйте сообщение разработчику.;\n
        \n
        <i>С уважением разработчик программы.</i>











    </string>
    <string name="send_report">Отправить разработчику</string>
    <string name="about_ver">Version: </string>
    <string name="year">2017 год</string>
    <string name="sendauthor">Отправить разработчику</string>
    <string name="sendauthortext">Сообщение для разработчика</string>


</resources>
