<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">




<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:textSize="@dimen/largetext"
        style="@style/MyStileForInputInfoTextView"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helptext"
        android:textSize="@dimen/helptext"

        />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/helpedit"
        android:background="@color/edithelpcolor"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:hint="@string/sendauthortext"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/helpsend"
        android:onClick="sendauthor"
        android:text="@string/sendauthor"
        />


</LinearLayout>
</ScrollView>